--- a/index.html
+++ b/index.html
@@ -468,10 +468,7 @@
                                 <img src="./img/meat.png" alt="" />
                             </picture>
                             <div class="section-full__imgbox section-full__imgbox-light">
-                                <picture>
-                                    <source srcset="./img/light.webp" type="picture/webp" />
-                                    <img src="./img/svg/light.svg" alt="" />
-                                </picture>
+                                <img src="./img/svg/light.svg" alt="" />
                             </div>
                         </div>
                     </div>
@@ -500,8 +497,7 @@
                         </form>
                         <div class="section-full__imgbox section-full__imgbox-apple">
                             <picture>
-                                <source srcset="./img/light.webp" type="picture/webp" />
-                                <img src="./img/svg/apple.svg" alt="" />
+                                <source srcset="./img/apple.webp" type="picture/webp" />
                                 <img src="./img/apple.png" alt="" />
                             </picture>
                         </div>
@@ -509,21 +505,21 @@
                 </div>
             </div>
             <div class="section-full__imgbox section-full__imgbox-left">
-                <img src="./../img/svg/contact-vector-left.svg" alt="" />
+                <img src="./img/svg/contact-vector-left.svg" alt="" />
                 <div class="section-full__imgbox section-full__imgbox-light">
-                    <img src="./../img/svg/light.svg" alt="" />
+                    <img src="./img/svg/light.svg" alt="" />
                 </div>
             </div>
             <div class="section-full__imgbox section-full__imgbox-right">
-                <img src="./../img/svg/contact-vector-right.svg" alt="" />
+                <img src="./img/svg/contact-vector-right.svg" alt="" />
                 <div class="section-full__imgbox section-full__imgbox-light">
-                    <img src="./../img/svg/light.svg" alt="" />
+                    <img src="./img/svg/light.svg" alt="" />
                 </div>
             </div>
             <div class="section-full__imgbox section-full__imgbox-bottom">
-                <img src="./../img/svg/contact-vector-right.svg" alt="" />
+                <img src="./img/svg/contact-vector-right.svg" alt="" />
                 <div class="section-full__imgbox section-full__imgbox-light">
-                    <img src="./../img/svg/light.svg" alt="" />
+                    <img src="./img/svg/light.svg" alt="" />
                 </div>
             </div>
         </section>
