--- a/index.html
+++ b/index.html
@@ -528,6 +528,47 @@
                 </div>
             </div>
         </footer>
+        <div class="popup popup__calculation">
+            <div class="popup__close"></div>
+            <div class="popup__dialog">
+                <h2>Рассчет рациона</h2>
+                <div class="popup__desc">Заполните информацию и мы свяжемся с вами, чтобы подсказать с подбором рациона для вашего хвостика. Или напишите нам в мессендерах <a href="##">WhatsApp</a> и <a href="##">Telegram</a>.</div>
+                <form class="form-calculation" id="calculation" name="calculation" action="" method="POST">
+                    <div class="field-line__radio">
+                        <input class="field__radio" type="radio" id="adult-dog" name="age-dog" checked="" />
+                        <label for="adult-dog">Взрослая собака</label>
+                    </div>
+                    <div class="field-line__radio">
+                        <input class="field__radio" type="radio" id="puppy" name="age-dog" />
+                        <label for="puppy">Щенок</label>
+                    </div>
+                    <div class="field-line__area">
+                        <input class="field field__weight" type="text" id="field-weight" name="field-weight" placeholder=" " />
+                        <label class="field__label" for="field-weight">Вес (кг)</label>
+                    </div>
+                    <div class="field-line__area">
+                        <input class="field field__name" type="text" id="field-name" name="field-name" placeholder=" " />
+                        <label class="field__label" for="field-age">Возраст</label>
+                    </div>
+                    <div class="field-line__area">
+                        <input class="field field__yourname" type="text" id="field-yourname" name="field-yourname" placeholder=" " />
+                        <label class="field__label" for="field-yourname">Ваше имя</label>
+                    </div>
+                    <div class="field-line__area">
+                        <input class="field field__phone" type="text" id="field-phone" name="field-phone" placeholder=" " />
+                        <label class="field__label" for="field-name">Телефон</label>
+                    </div>
+                    <textarea class="field__text" id="calc-text" name="field-calc-text" placeholder="Если у вашего хвостика есть особенности здоровья – напишите об этом..."></textarea>
+                    <div class="field-line">
+                        <div class="field-line__checkbox">
+                            <input class="field__checkbox" type="checkbox" id="calc-agreement" name="calc-agreement" checked="" />
+                            <label class="field__checkbox-label" for="calc-agreement">Даю согласие на обработку персональных данных</label>
+                        </div>
+                    </div>
+                    <button class="btn btn--red" type="submit" name="send">Расчитать</button>
+                </form>
+            </div>
+        </div>
     </div>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="./js/main.js"></script>
